--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -210,3 +210,21 @@ td {
 .form-group {
     margin-bottom: 20px;
 }
+input.product_data {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+.product_list div {
+    transition: .3s ease all; 
+}
+input.product_data[type=checkbox]:checked ~ div {
+    background-color: #111827;
+}
+input.product_data[type=checkbox]:checked ~ div {
+    color:#fff;
+}
