--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,7 +8,9 @@ body,
 aside a {
     transition: 0.5s all;
 }
-
+tbody td {
+    text-align: left;
+}
 aside a:hover,aside a.active {
     --tw-bg-opacity: 1;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
