--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -249,3 +249,23 @@ input.product_data[type="checkbox"]:checked ~ div {
 input.product_data[type="checkbox"]:checked ~ div {
     color: #fff;
 }
+
+span.input-group-text.peso {
+    border-radius:  0.375rem 0 0 0.375rem !important;
+}
+
+input#amount { 
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--bs-body-bg);
+    background-clip: padding-box;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: 0 0.375rem 0.375rem 0 !important;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out; 
+}
